# autosense-dpi

./: Makefile.am  README.md  configure.ac  libtool  restore.sh
PSPI_PcapReader/: .cproject  .project  AutosenseImplementation_Ragel2Helper.h  IProtocolSensor.h  Makefile.am  ndpiReader.cpp
PSPI_PcapReader/Debug/: makefile  subdir.mk
nDPIAPIIncludes/: IfMcFePlugin_DecTypes.h  ndpi_api.h  ndpi_define.h  ndpi_main.h  ndpi_protocol_ids.h  ndpi_protocols.h  ndpi_typedefs.h  ndpi_unix.h  ndpi_win32.h  shouldpreCompile_common.h
nDPIIntegrated/: .cproject  .project  AutosenseImplementation_Ragel2Helper.cpp  AutosenseImplementation_Ragel2Helper.h  IProtocolSensor.h  Makefile.am  TrafficAutosenseImplementation.cpp  TrafficAutosenseImplementation.h  makeLog.txt  ndpi_main.cpp
nDPIIntegrated/protocols/: mail_pop.cpp
